manifests/auth-proxy/internal-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-proxy
  namespace: auth-proxy
  labels:
    app: internal-proxy
  annotations:
    configmap.reloader.stakater.com/reload: "host-mappings"
    secret.reloader.stakater.com/reload: "tailscale-internal-proxy"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: internal-proxy
  template:
    metadata:
      labels:
        app: internal-proxy
    spec:
      serviceAccountName: tailscale-internal-proxy
      dnsPolicy: ClusterFirst
      dnsConfig:
        nameservers:
          - 100.100.100.100
      containers:
      - name: proxy
        image: rg.fr-par.scw.cloud/averagemarcus/proxy:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: host-mappings
          mountPath: /config/
      - name: tailscale
        image: ghcr.io/tailscale/tailscale:v1.50
        imagePullPolicy: Always
        tty: true
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        command:
        - sh
        - -c
        - |
          export PATH=$PATH:/tailscale/bin
          if [[ ! -d /dev/net ]]; then mkdir -p /dev/net; fi
          if [[ ! -c /dev/net/tun ]]; then mknod /dev/net/tun c 10 200; fi
          echo "Starting tailscaled"
          tailscaled --state=kube:${TS_KUBE_SECRET} --socket=/tmp/tailscaled.sock &
          PID=$!
          echo "Running tailscale up"
          tailscale --socket=/tmp/tailscaled.sock up \
            --accept-dns=${TS_ACCEPT_DNS} \
            --authkey=${TS_AUTH_KEY} \
            ${TS_EXTRA_ARGS}
          echo "Re-enabling incoming traffic from the cluster"
          wait ${PID}
      volumes:
      - name: host-mappings
        configMap:
          name: host-mappings
---
apiVersion: v1
kind: Service
metadata:
  name: tekton-el
  namespace: auth-proxy
  labels:
    app: internal-proxy
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: internal-proxy
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: auth-proxy
  labels:
    app: internal-proxy
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: internal-proxy
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: loki-distributed
  namespace: auth-proxy
  labels:
    app: internal-proxy
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: internal-proxy
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: auth-proxy
  labels:
    app: internal-proxy
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: internal-proxy
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: vmcluster
  namespace: auth-proxy
  labels:
    app: internal-proxy
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: internal-proxy
  type: ClusterIP
---
