manifests/auth-proxy/internal-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: tekton-el
  namespace: auth-proxy
  labels:
    app: internal-proxy
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: internal-proxy
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: auth-proxy
  labels:
    app: internal-proxy
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: internal-proxy
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: loki-distributed
  namespace: auth-proxy
  labels:
    app: internal-proxy
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: internal-proxy
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: auth-proxy
  labels:
    app: internal-proxy
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: internal-proxy
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: vmcluster
  namespace: auth-proxy
  labels:
    app: internal-proxy
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: internal-proxy
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: hermes
  namespace: auth-proxy
  labels:
    app: internal-proxy
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: internal-proxy
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: auth-proxy
  labels:
    app: internal-proxy
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: internal-proxy
  type: ClusterIP
---
