manifests/auth-proxy/proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-proxy
  namespace: auth-proxy
  labels:
    app: internal-proxy
  annotations:
    configmap.reloader.stakater.com/reload: "host-mappings"
    secret.reloader.stakater.com/reload: "tailscale-auth"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: internal-proxy
  template:
    metadata:
      labels:
        app: internal-proxy
    spec:
      priorityClassName: critical
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      dnsConfig:
        nameservers:
          - 100.100.100.100
      containers:
      - name: proxy
        image: rg.fr-par.scw.cloud/averagemarcus/proxy:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: host-mappings
          mountPath: /config/

      - name: oauth-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.15.4
        args:
        - --cookie-secure=false
        - --provider=oidc
        - --provider-display-name=Auth0
        - --upstream=http://localhost:8080
        - --http-address=0.0.0.0:8181
        - --email-domain=*
        - --pass-basic-auth=false
        - --pass-access-token=false
        - --oidc-issuer-url=https://marcusnoble.eu.auth0.com/
        - --cookie-secret=KDGD6rrK6cBmryyZ4wcJ9xAUNW9AQNFT
        - --cookie-expire=336h0m0s
        ports:
        - containerPort: 8181
          protocol: TCP
        resources:
          limits:
            memory: 80Mi
          requests:
            memory: 80Mi
      volumes:
      - name: host-mappings
        configMap:
          name: host-mappings
---
apiVersion: v1
kind: Service
metadata:
  name: tailscale-proxy
  namespace: auth-proxy
  labels:
    app: internal-proxy
spec:
  ports:
  - name: non-auth
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: auth
    port: 81
    protocol: TCP
    targetPort: 8181
  selector:
    app: internal-proxy
  type: ClusterIP
---
