manifests/auth-proxy/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-proxy-v2
  namespace: auth-proxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - hello.cluster.fun
    secretName: non-auth-proxy-ingress-v2
  rules:
  - host: hello.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: tailscale-proxy
            port:
              name: auth

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-proxy
  namespace: auth-proxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - downloads.cluster.fun
    - argo.cluster.fun
    - code.cluster.fun
    - jackett.cluster.fun
    - printer.cluster.fun
    - ender3pro.printer.cluster.fun
    - flsunq5.printer.cluster.fun
    - elegoomars2.printer.cluster.fun
    - radarr.cluster.fun
    - readarr.cluster.fun
    - sonarr.cluster.fun
    - lidarr.cluster.fun
    - prowlarr.cluster.fun
    - transmission.cluster.fun
    - tekton.cluster.fun
    - changedetection.cluster.fun
    secretName: auth-proxy-ingress
  rules:
  - host: downloads.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-proxy
            port:
              name: http
  - host: argo.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-proxy
            port:
              name: http
  - host: code.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-proxy
            port:
              name: http
  - host: jackett.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-proxy
            port:
              name: http
  - host: printer.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-proxy
            port:
              name: http
  - host: ender3pro.printer.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-proxy
            port:
              name: http
  - host: flsunq5.printer.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-proxy
            port:
              name: http
  - host: elegoomars2.printer.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-proxy
            port:
              name: http
  - host: radarr.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-proxy
            port:
              name: http
  - host: readarr.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-proxy
            port:
              name: http
  - host: sonarr.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-proxy
            port:
              name: http
  - host: lidarr.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-proxy
            port:
              name: http
  - host: prowlarr.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-proxy
            port:
              name: http
  - host: transmission.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-proxy
            port:
              name: http
  - host: tekton.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-proxy
            port:
              name: http
  - host: changedetection.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-proxy
            port:
              name: http
