manifests/auth-proxy/non-auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: non-auth-proxy
  namespace: auth-proxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: 25m
    nginx.ingress.kubernetes.io/client-body-buffer-size: 25m
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - hello-world.cluster.fun
    - ombi.cluster.fun
    - bsky-feeds.cluster.fun
    - ai.cluster.fun
    - penpot.cluster.fun
    - trek.cluster.fun
    secretName: non-auth-proxy-ingress
  rules:
  - host: hello-world.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: tailscale-proxy
            port:
              name: non-auth
  - host: ombi.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: tailscale-proxy
            port:
              name: non-auth
  - host: bsky-feeds.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: tailscale-proxy
            port:
              name: non-auth
  - host: ai.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: tailscale-proxy
            port:
              name: non-auth
  - host: penpot.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: tailscale-proxy
            port:
              name: non-auth
  - host: trek.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: tailscale-proxy
            port:
              name: non-auth
